--- a/readCSV.html
+++ b/readCSV.html
@@ -139,11 +139,56 @@ var readData = d3.csv("RegionalInterestByConditionOverTime.csv", function(d) {
 		_2017_diabetes: +d["2017+diabetes"]
 	};
 }, function(data) {
-	read(data);
+	genGraphs(data);
 });
 
-function read (data) {
-	console.log(data);
+diseases = ["cancer", "cardiovascular", "stroke", "depression", "rehab", "vaccine", "diarrhea", "obesity", "diabetes"];
+years = [2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017]
+
+function genGraphs (data) {
+	//console.log(data);
+	lineGraphData(data);
+}
+
+function addToDict (dict, disease, count, year) {
+	//console.log(data);
+	//console.log(year);
+	tmp = dict[year];
+	//console.log(tmp);
+	if (disease in dict[year]) {
+		//console.log(tmp[disease]);
+		tmp[disease] += count;
+		//console.log(tmp[disease]);
+	}
+	else {
+		tmp[disease] = count;
+	}
+	dict[year] = tmp;
+	return dict;
+
+} 
+function lineGraphData(data) {
+	var dict = { }; // {year, {disease, count}}
+	data.forEach(function(element) {
+	   for(year in years) {
+	  	for (disease in diseases)  {
+	  		if (years[year] in dict) {
+	  			dict = addToDict(dict, diseases[disease], element["_"+years[year]+"_"+diseases[disease]], years[year]);
+	  		}
+	  		else {
+	  			//console.log(dict);
+	  			var x = {};
+	  			x[diseases[disease]] = element["_"+years[year]+"_"+diseases[disease]];
+	  			//console.log(x);
+	  			dict[years[year]] = x;
+	  			//console.log(dict);
+	  		}
+	  		
+	  	}
+	  }
+	  //console.log(dict);
+	});
+	console.log(dict);
 }
 </script>
 
