--- a/readCSV.html
+++ b/readCSV.html
@@ -147,18 +147,14 @@ years = [2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015,
 
 function genGraphs (data) {
 	//console.log(data);
-	lineGraphData(data);
+	lineGraphDict = lineGraphData(data);
+	mapGraphDict = mapGraphData(data);
 }
 
 function addToDict (dict, disease, count, year) {
-	//console.log(data);
-	//console.log(year);
 	tmp = dict[year];
-	//console.log(tmp);
 	if (disease in dict[year]) {
-		//console.log(tmp[disease]);
 		tmp[disease] += count;
-		//console.log(tmp[disease]);
 	}
 	else {
 		tmp[disease] = count;
@@ -176,19 +172,47 @@ function lineGraphData(data) {
 	  			dict = addToDict(dict, diseases[disease], element["_"+years[year]+"_"+diseases[disease]], years[year]);
 	  		}
 	  		else {
-	  			//console.log(dict);
 	  			var x = {};
 	  			x[diseases[disease]] = element["_"+years[year]+"_"+diseases[disease]];
-	  			//console.log(x);
 	  			dict[years[year]] = x;
-	  			//console.log(dict);
 	  		}
 	  		
 	  	}
 	  }
-	  //console.log(dict);
 	});
-	console.log(dict);
+	return dict;
+}
+
+function getMax(dict) {
+	var result = {};
+	for (key in dict) {
+		var max;
+		obj = dict[key];
+		max = Object.keys(obj).reduce((a, b) => obj[a] > obj[b] ? a : b);
+		result[key] = max;
+	}
+	return result;
+}
+
+function mapGraphData(data){
+	var dict = { }; // {state, {disease, count}}
+	var arr = []
+	data.forEach(function(element) {
+	   for(year in years) {
+	  	for (disease in diseases)  {
+	  		if (element.state in dict) {
+	  			dict = addToDict(dict, diseases[disease], element["_"+years[year]+"_"+diseases[disease]], element.state);
+	  		}
+	  		else {
+	  			var x = {};
+	  			x[diseases[disease]] = element["_"+years[year]+"_"+diseases[disease]];
+	  			dict[element.state] = x;
+	  		}
+	  	}
+	  }
+	});
+	result = getMax(dict);
+	return result;
 }
 </script>
 
