--- a/readCSV.html
+++ b/readCSV.html
@@ -3,6 +3,7 @@
 <title>Read CSV</title>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="http://d3js.org/topojson.v2.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
 <script>
 var readData = d3.csv("RegionalInterestByConditionOverTime.csv", function(d) {
@@ -336,13 +337,17 @@ var line1 = d3.line()
 <script id="drawUSMap">
 	
 var svgMap = d3.select("#usMap");
-var projection = d3.geoAlbersUsa().scale(1000);
+svgMap.append("text")
+.style("font-family", "Ubuntu")
+.style("font-size", "15")
+.text("Most Frequently Searched Health Terms by State");
+var projection = d3.geoAlbersUsa().scale(900);
 var pathGenerator = d3.geoPath().projection(projection);
 
 var rawData;
 var states;
 
-var colors = {"stroke": "red", "cancer": "blue", "diabetes": "yellow", "rehab": "green"};
+var colors = {"stroke": "#b2ef9b", "cancer": "#fff189", "diabetes": "#c6c6c6", "rehab": "#ffae9c"};
 
 
 d3.json("us-states.json", function (data) {
@@ -366,13 +371,10 @@ d3.json("us-states.json", function (data) {
   	if (colors[value]) {
   		return colors[value];
   	} else {
-  		return "rgb(213, 222, 217)";
+  		return "rgb(240, 240, 240)";
   	}
   });
 });
-
-
 </script>
-
 </html>
 
