--- a/readCSV.html
+++ b/readCSV.html
@@ -17,7 +17,6 @@
     left: 0px;
     bottom: 0px;
     width: 20%;
-    background-color: #c6c6c6;
     float: left;
     z-index: 1;
 }
@@ -31,12 +30,6 @@
 	 font-size: 25px;
 	 line-height: 40px;
 	 padding: 10px 10px 10px 20px;
-
-}
-#legend p {
-	 font-family: 'Lato', Helvetica, Arial, sans-serif;
-	 font-size: 20px;
-	 line-height: 25px;
 }
 
 #subtitle {
@@ -73,12 +66,38 @@ hr {
 	</div>
 
 	<div id = "legend">
-		<ul>
-	      <p>stroke: #b2ef9b<p>
-	      <p>cancer: #fff189</p>
-	      <p>diabetes: #c6c6c6</p>
-	      <p>rehab: #ffae9c</p>
-	    </ul>
+		<svg id="circles"></svg>
+		<script>
+			var diseases = ["cancer", "cardiovascular", "stroke", "depression", "rehab", "vaccine", "diarrhea", "obesity", "diabetes"];
+			var colorList = {"cancer": "#fff189", "cardiovascular": "#6ab0de", "stroke": "#b2ef9b", "depression": "#c895fc", "rehab": "#ffae9c", "vaccine": "#fffe81", "diarrhea": "#5bffad",      "obesity": "#adffef", "diabetes": "#c6c6c6"};
+
+			var svg = d3.select("#circles")
+			.attr("height", 230)
+			.style("padding-top", 10);
+			svg.selectAll("g")
+			.data(diseases)
+			.enter()
+			.each(function (d, i) {
+				var g = d3.select(this);
+				g.append("circle")
+				.attr("cx", 15)
+				.attr("cy", i*25 + 10)
+				.attr("r", 7)
+				.style("fill", function(d) {
+					return colorList[d];
+				});
+				g.append("text")
+				.attr("x", 40)
+				.attr("y", i*25 + 15)
+				.text(function(i) {
+					console.log(i);
+					return i;
+				})
+				.style("font-family", "Lato")
+				.style("font-size", "13");
+			});
+			
+		</script>
 	</div>
 
 </div>
@@ -220,15 +239,14 @@ return {
 genGraphs(data);
 });
 
-diseases = ["cancer", "cardiovascular", "stroke", "depression", "rehab", "vaccine", "diarrhea", "obesity", "diabetes"];
-colorList = ["#fff189", "#6ab0de", "#b2ef9b", "#c895fc", "#ffae9c", "#fffe81", "#48ffa5", "#b3f8ff", "#c6c6c6"];
-years = [2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017]
+var diseases = ["cancer", "cardiovascular", "stroke", "depression", "rehab", "vaccine", "diarrhea", "obesity", "diabetes"];
+var colorList = ["#fff189", "#6ab0de", "#b2ef9b", "#c895fc", "#ffae9c", "#fffe81", "#5bffad", "#adffef", "#c6c6c6"];
+var years = [2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017]
 
 function genGraphs (data) {
 	lineGraphDict = lineGraphData(data);
 	mapGraphDict = mapGraphData(data);
 	drawLineGraph(lineGraphDict);
-
 }
 
 function addToDict (dict, disease, count, year) {
@@ -438,9 +456,6 @@ function drawLineGraph(lineData) {
 		 svg.append("path")
 	        .attr("d", lineFunction(data))
 	        .attr("stroke", function () {
-
-	        		console.log(disease);
-  					console.log(colorList[disease]);
   				if (colorList[disease]) {
 			  		return colorList[disease];
 			  	} else {
