rid of commas on xaxis

--- a/readCSV.html
+++ b/readCSV.html
@@ -441,7 +441,7 @@ function drawLineGraph(lineData) {
 
 	svg.append("g")
       .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(scaleX));
+      .call(d3.axisBottom(scaleX).tickFormat(d3.format("d")));
 
     svg.append("g")
       .call(d3.axisLeft(scaleY));
