--- a/readCSV.html
+++ b/readCSV.html
@@ -29,7 +29,7 @@
 	 font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 	 font-size: 25px;
 	 line-height: 40px;
-	 padding: 10px 10px 10px 20px;
+	 padding: 10px 10px 0px 20px;
 }
 
 #subtitle {
@@ -48,6 +48,11 @@
 	float: right;
 }
 
+#titleHR {
+	padding-left: 20px;
+	width: 300%;
+}
+
 hr {
 	height: 2px;
 	fill: #c6c6c6;
@@ -57,13 +62,21 @@ hr {
 	border-top: 2px solid #c6c6c6;
 }
 
+h2 {
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
+	padding: 30px 10px 10px 20px;
+}
+
 </style>
 
 <div id="sidebar">
 
 	<div id = "description">
-		<h1>Health Searches in United States</h1>
+		<h1>Trends in Health Searches in United States</h1>
 	</div>
+	<div id = "titleHR"><hr/></div>
+	<div><h2>by Yuji Yang, Akhil Gopu, Lesley Huang</h2></div>
 
 	<div id = "legend">
 		<svg id="circles"></svg>
