added a 'the' lol

--- a/readCSV.html
+++ b/readCSV.html
@@ -73,7 +73,7 @@ h2 {
 <div id="sidebar">
 
 	<div id = "description">
-		<h1>Trends in Health Searches in United States</h1>
+		<h1>Trends in Health Searches in the United States</h1>
 	</div>
 	<div id = "titleHR"><hr/></div>
 	<div><h2>by Yuji Yang, Akhil Gopu, Lesley Huang</h2></div>
