--- a/readCSV.html
+++ b/readCSV.html
@@ -503,7 +503,7 @@ function drawLineGraph(lineData) {
 	const sumValues = (obj) => Object.keys(obj).reduce((acc, value) => acc + obj[value], 0);
 	for (var disease in diseases) {
 		data = [];
-		if (diseases[disease] == "cardiovascular") 
+		if (diseases[disease] == "cardiovascular" || diseases[disease] == "diarrhea") 
 			continue;
 		for (var year in lineData) {
 			data.push([year, lineData[year][diseases[disease]] / sumValues(lineData[year])]);
