--- a/readCSV.html
+++ b/readCSV.html
@@ -81,8 +81,8 @@ h2 {
 	<div id = "legend">
 		<svg id="circles"></svg>
 		<script>
-			var diseases = ["cancer", "cardiovascular", "stroke", "depression", "rehab", "vaccine", "diarrhea", "obesity", "diabetes"];
-			var colorList = {"cancer": "#fff189", "cardiovascular": "#6ab0de", "stroke": "#b2ef9b", "depression": "#c895fc", "rehab": "#ffae9c", "vaccine": "#fffe81", "diarrhea": "#5bffad", "obesity": "#c6c6c6", "diabetes": "#a8e3d8"};
+			var diseases = ["cancer", "stroke", "depression", "rehab", "vaccine", "obesity", "diabetes"];
+			var colorList = {"cancer": "#fff189", "stroke": "#b2ef9b", "depression": "#c895fc", "rehab": "#ffae9c", "vaccine": "#6ab0de", "obesity": "#c6c6c6", "diabetes": "#a8e3d8"};
 
 			var svg = d3.select("#circles")
 			.attr("height", 230)
