--- a/readCSV.html
+++ b/readCSV.html
@@ -87,15 +87,17 @@ h2 {
 
 			var firstLegendKeys = ["cancer","stroke","rehab","diabetes"];
 
+			var secondLegendKeys = ["cancer","stroke","depression","rehab","vaccine","obesity","diabetes"];
+
 			function drawLegend(keys, legend, padding){
 				var svg = d3.select(legend)
-				//.attr("height", 230)
+				.attr("height", 230)
 				.style("padding-top", padding);
 				svg.selectAll("g")
-				.data(diseases)
+				.data(keys)
 				.enter()
 				.each(function (d, i) {
-					if (i in keys ){
+					
 						var g = d3.select(this);
 						g.append("circle")
 						.attr("cx", 15)
@@ -112,7 +114,7 @@ h2 {
 							return i;
 						})
 						.style("font-family", "Lato")
-						.style("font-size", "13");}
+						.style("font-size", "13");
 				});
 			};
 
@@ -120,7 +122,7 @@ h2 {
 		</script>
 	</div>
 
-	<script>var secondLegend = drawLegend(diseases, "#circles2", 550);</script>
+	<script>var secondLegend = drawLegend(secondLegendKeys, "#circles2", 500);</script>
 </div>
 
 <script id = "repeatLegend">
