--- a/readCSV.html
+++ b/readCSV.html
@@ -290,7 +290,7 @@ var years = [2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2
 function genGraphs (data) {
 	lineGraphDict = lineGraphData(data);
 	mapGraphDict = mapGraphData(data);
-	heatGraphDict = heatMapData(data);
+	heatGraphDict = heatMapData(data, "cancer");
 	drawLineGraph(lineGraphDict);
 }
 
@@ -343,7 +343,7 @@ function getMax(dict) {
 	return result;
 }
 
-function heatMapData(data) {
+function heatMapData(data, x) {
 	var dict = { }; // {state, {disease, count}}
 	data.forEach(function(element) { //from StackOverflow
 	   for(year in years) {
@@ -362,17 +362,17 @@ function heatMapData(data) {
 	cancerMax = -1;
 	cancerMin = 100000000000000000;
 	for (state in dict) {
-		if (dict[state]["cancer"] < cancerMin) {
-			cancerMin = dict[state]["cancer"]
+		if (dict[state][x] < cancerMin) {
+			cancerMin = dict[state][x]
 		} 
-		if (dict[state]["cancer"] > cancerMax) {
-			cancerMax = dict[state]["cancer"]
+		if (dict[state][x] > cancerMax) {
+			cancerMax = dict[state][x]
 		}
 	}
 	var scale = d3.scaleLinear().range([.1,1]).domain([cancerMin, cancerMax]);
 	result = { };
 	for (state in dict) {
-		result[state] = scale(dict[state]["cancer"]);
+		result[state] = scale(dict[state][x]);
 	}
 
 	return result;
