--- a/readCSV.html
+++ b/readCSV.html
@@ -349,7 +349,7 @@ function heatMapData(data) {
 			cancerMax = dict[state]["cancer"]
 		}
 	}
-	var scale = d3.scaleLinear().range([.1,1]).domain([cancerMin, cancerMax]);
+	var scale = d3.scaleLinear().range([.3,1]).domain([cancerMin, cancerMax]);
 	result = { };
 	for (state in dict) {
 		result[state] = scale(dict[state]["cancer"]);
@@ -412,7 +412,6 @@ function abbrState(input, to){
         ['Nebraska', 'NE'],
         ['Nevada', 'NV'],
         ['New Hampshire', 'NH'],
-        ['New Jersey', 'NJ'],
         ['New Mexico', 'NM'],
         ['New York', 'NY'],
         ['North Carolina', 'NC'],
@@ -421,13 +420,11 @@ function abbrState(input, to){
         ['Oklahoma', 'OK'],
         ['Oregon', 'OR'],
         ['Pennsylvania', 'PA'],
-        ['Rhode Island', 'RI'],
         ['South Carolina', 'SC'],
         ['South Dakota', 'SD'],
         ['Tennessee', 'TN'],
         ['Texas', 'TX'],
         ['Utah', 'UT'],
-        ['Vermont', 'VT'],
         ['Virginia', 'VA'],
         ['Washington', 'WA'],
         ['West Virginia', 'WV'],
@@ -480,6 +477,8 @@ function abbrState(input, to){
 <div id="subtitle"><hr/></div>
 <div id="subsub">*Insufficient data for Vermont, Rhode Island, and New Jersey</div>
 <svg width="960" height="500" id = "usMap"></svg>
+<div id="subtitle" style="padding-top: 30px">Heat Map of Cancer Related Searches<br/>By State, 2004 to 2017</div>
+<svg width="960" height="500" id = "heatMap"></svg>
 <div id="subtitle" style="padding-top: 30px">Health Search <br/>Terms Over Time</div>
 <div id="subtitle"><hr/></div>
 <svg width="960" height="500" id = "svgTimeSeries"></svg>
@@ -634,6 +633,45 @@ d3.json("us-states.json", function (data) {
 	  	} else {
 	  		return "rgb(240, 240, 240)";
 	  	}
+	  });
+});
+</script>
+
+<script id="heatMap">
+	
+var heatMap = d3.select("#heatMap");
+var projection = d3.geoAlbersUsa().scale(900);
+var pathGenerator = d3.geoPath().projection(projection);
+
+var rawData;
+var states;
+
+d3.json("us-states.json", function (data) {
+
+	for (var i =  0; i < data.features.length; i++) {
+  	var abb = abbrState(data.features[i].properties.name, "abbr");
+  	
+  	if (heatGraphDict[abb]) {
+  		data.features[i].properties.heat = heatGraphDict[abb];
+  	}
+  }
+   heatMap.selectAll("path")
+  .data(data.features)
+  .enter()
+  .append("path")
+	  .attr("d", pathGenerator)
+	  .style("stroke", "#fff")
+	  .style("stroke-width", "1")
+	  .style("fill", function(d) {
+		if (d.properties.name == "Vermont" || d.properties.name == "Rhode Island" ||
+			d.properties.name == "New Jersey") {
+			return "rgb(240, 240, 240)";
+		}
+		return "orange";
+	  })
+	  .style("opacity", function(d) {
+	  	var value = d.properties.heat;
+	  	return value;
 	  });
 });
 </script>
