--- a/readCSV.html
+++ b/readCSV.html
@@ -690,7 +690,7 @@ d3.json("us-states.json", function (data) {
 			d.properties.name == "New Jersey") {
 			return "rgb(240, 240, 240)";
 		}
-		return "orange";
+		return "#ffea42";
 	  })
 	  .style("opacity", function(d) {
 	  	var value = d.properties.heat;
