--- a/readCSV.html
+++ b/readCSV.html
@@ -122,7 +122,7 @@ h2 {
 		</script>
 	</div>
 
-	<script>var secondLegend = drawLegend(secondLegendKeys, "#circles2", 425);</script>
+	<script>var secondLegend = drawLegend(secondLegendKeys, "#circles2", 955);</script>
 </div>
 
 <script id = "repeatLegend">
@@ -500,9 +500,10 @@ function abbrState(input, to){
 <div id="subtitle"><hr/></div>
 <div id="subsub">*Insufficient data for Vermont, Rhode Island, and New Jersey</div>
 <svg width="960" height="500" id = "usMap"></svg>
-<div id="subtitle" style="padding-top: 30px">Heat Map of Cancer Related Searches<br/>By State, 2004 to 2017</div>
+<div id="subtitle" style="padding-top: 30px">Choropleth of Cancer Related Searches<br/>By State, 2004 to 2017</div>
+<div id="subtitle"><hr/></div>
 <svg width="960" height="500" id = "cancerMap"></svg>
-<div id="subtitle" style="padding-top: 30px">Health Search <br/>Terms Over Time</div>
+<div id="subtitle" style="padding-top: 30px">Relative Frequency of<br/>Health Search Terms Over Time</div>
 <div id="subtitle"><hr/></div>
 <svg width="960" height="500" id = "svgTimeSeries"></svg>
 <script>
